fix bottom space on mobile screen

--- a/style.css
+++ b/style.css
@@ -257,6 +257,9 @@ html{
     html{
         font-size: 55%;
     }
+    .music-container{
+        padding-bottom: 3rem;
+    }
 }
 @media (max-width: 400px) {
     html{
